# Projet-TER-artiste-run-spaces

./: .gitignore  README.md  environment.yml  how e199677 --stat
.github/workflows/: test.yml
Codes/: exploration.ipynb
Codes/BERT2/: fichier_traduit.xlsx  resultats_complets.xlsx  resume_classification.csv  topic_analysis.xlsx
Codes/BERT2_Vrai/: data.json  dotenv  output.csv  (+5 more)
Codes/code_extract_text_from_pdf/: Code.py  pyproject.toml
Donnees/: .~lock.fichier_traduit.xlsx#  csv_QR_ars.csv  fichier_mis_a_jour.xlsx  fichier_traduit.xlsx  new_fichier_traduit.xlsx  nuage_points.ipynb  spaces.csv  spaces.xlsx  spacestri.xlsx  topic_info.xlsx  topics_results.xlsx
Mon Code/: BaseComplement.ipynb  Bert.py  BertTopic.ipynb  Code.py  Code_extraction.py  Compl.ipynb  Mon exemple Llma.ipynb  PreTraitement.ipynb  SqLITEComplément_base.ipynb  bert.ipynb  data.json  document_visualization_data.json  embeddings_cache.pkl  environment.yml  fichier_a_jour.csv  fichier_mis_a_jour.xlsx  fichier_trad.xlsx  hybrid_topics.json  intertopic_distance_data.json  library à ajouter à env.rtf  mardown.ipynb  markdown.py  new_spaces_a_jour.xlsx  nuages.py  prepare_data.py  reponses_stats.json  resultats_complets.xlsx  results_with_annotations.xlsx  semantic_network.json  semantic_network_data.json  semantic_network_documents_data.json  semantic_network_spaces_data.json  spaces.csv  spaces.xlsx  spacesnew.csv  spacestri.xlsx  spacestri1.xlsx  test_graph.html  topic_analysis.json  topic_analysis.xlsx  (+16 more)
traitement_txt/: qstns-rpns.docx  space.xlsx  traitement_donnees_textuelles.ipynb
(+110 files in other folders)
