[tool.poetry]
name = "code-extract-text-from-pdf"
version = "0.1.0"
description = ""
authors = ["JeromeVitof <jeromevitoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pdfplumber = "^0.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
